# certifiable-data

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  LICENSE  README.md  manifest  packages.manifest  repositories.manifest
.github/workflows/: ci.yml
certifiable-data/: buildfile  manifest
certifiable-data-tests/: .gitignore  manifest
certifiable-data-tests/unit/: buildfile  test_bit_identity.c  test_merkle.c  test_prng.c
certifiable-data/include/: batch.h  ct_types.h  dvm.h  loader.h  normalize.h  prng.h  sha256.h
certifiable-data/src/audit/: merkle.c
certifiable-data/src/data/: normalize.c  shuffle.c
certifiable-data/src/dvm/: prng.c
docs/: CT-MATH-001.md  CT-STRUCT-001.md
docs/requirements/: SRS-001-LOADER.md  SRS-002-NORMALIZE.md  SRS-003-AUGMENT.md  SRS-004-SHUFFLE.md  SRS-005-BATCH.md  SRS-006-MERKLE:.md
include/: augment.h  buildfile  merkle.h  shuffle.h
src/: buildfile
src/audit/: sha256.c
src/data/: augment.c  batch.c
src/dvm/: primitives.c
tests/unit/: buildfile  test_augment.c  test_batch.c  test_normalize.c  test_primitives.c  test_shuffle.c
